--- a/calculator.html
+++ b/calculator.html
@@ -5,8 +5,9 @@
     	<title>Calculator</title>
     	<link rel="stylesheet" href="sass/style.css">
   	</head>
+	<!-- calculator -->
   	<body>
-		<div id="container">
+		<div id="container"> 
 			<div class="clear_display_cont">
 				<input id="clear" type="button" value="C"/>					
 				<h2 id="display"></h2>
