--- a/calculator.html
+++ b/calculator.html
@@ -5,8 +5,7 @@
     		<title>Calculator</title>
     		<link rel="stylesheet" href="sass/style.css">
   	</head>
-	<!-- calculator -->
-  	<body>
+  	<body> <!-- main container has 5 rows of elements -->		
 		<div id="container"> 
 			<div class="clear_display_cont">
 				<input id="clear" type="button" value="C"/>					
