--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,8 @@
 	<head>
     		<meta charset="utf-8">
     		<title>Calculator</title>
-    		<link rel="stylesheet" href="sass/style.css">
+			<link rel="stylesheet" href="sass/style.css">
+			<meta name="viewport" content="width=device-width, initial-scale=1">        		  			
   	</head>
   	<body> <!-- main container has 5 rows of elements -->		
 		<div id="container"> 
